--- a/assets/css/_bootstrap_customization.scss
+++ b/assets/css/_bootstrap_customization.scss
@@ -9,322 +9,322 @@
 
 // Variables ===================================================================
 
-// $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat" !default;
-// @import url($web-font-path);
+$web-font-path: "https://fonts.googleapis.com/css?family=Montserrat" !default;
+@import url($web-font-path);
 
 // Navbar ======================================================================
 
-// .navbar {
-//   font-family: $headings-font-family;
-// }
+.navbar {
+  font-family: $headings-font-family;
+}
 
-// .bg-dark {
-//   background-color: $secondary !important;
-// }
+.bg-dark {
+  background-color: $secondary !important;
+}
 
-// .border-dark {
-//   border-color: $secondary !important;
-// }
+.border-dark {
+  border-color: $secondary !important;
+}
 
 // Buttons =====================================================================
 
-// .btn {
-//   font-family: $headings-font-family;
+.btn {
+  font-family: $headings-font-family;
 
-//   &,
-//   &:hover {
-//     color: $white;
-//   }
+  &,
+  &:hover {
+    color: $white;
+  }
 
-//   &-light,
-//   &-light:hover {
-//     color: $gray-700;
-//   }
+  &-light,
+  &-light:hover {
+    color: $gray-700;
+  }
 
-//   &-link,
-//   &-link:hover {
-//     color: $primary;
-//   }
+  &-link,
+  &-link:hover {
+    color: $primary;
+  }
 
-//   &-link.disabled:hover {
-//     color: $gray-600;
-//   }
+  &-link.disabled:hover {
+    color: $gray-600;
+  }
 
-//   &-outline-primary {
-//     color: $primary;
-//   }
+  &-outline-primary {
+    color: $primary;
+  }
 
-//   &-outline-secondary {
-//     color: $secondary;
-//   }
+  &-outline-secondary {
+    color: $secondary;
+  }
 
-//   &-outline-success {
-//     color: $success;
-//   }
+  &-outline-success {
+    color: $success;
+  }
 
-//   &-outline-info {
-//     color: $info;
-//   }
+  &-outline-info {
+    color: $info;
+  }
 
-//   &-outline-warning {
-//     color: $warning;
-//   }
+  &-outline-warning {
+    color: $warning;
+  }
 
-//   &-outline-danger {
-//     color: $danger;
-//   }
+  &-outline-danger {
+    color: $danger;
+  }
 
-//   &-outline-dark {
-//     color: $dark;
-//   }
+  &-outline-dark {
+    color: $dark;
+  }
 
-//   &-outline-light {
-//     color: $light;
-//   }
-// }
+  &-outline-light {
+    color: $light;
+  }
+}
 
 // Typography ==================================================================
 
 // Tables ======================================================================
 
-// .table {
+.table {
 
-//   &-primary,
-//   &-secondary,
-//   &-success,
-//   &-info,
-//   &-warning,
-//   &-danger {
-//     color: #fff;
-//   }
+  &-primary,
+  &-secondary,
+  &-success,
+  &-info,
+  &-warning,
+  &-danger {
+    color: #fff;
+  }
 
-//   &-primary {
-//     &, > th, > td {
-//       background-color: $primary;
-//     }
-//   }
+  &-primary {
+    &, > th, > td {
+      background-color: $primary;
+    }
+  }
 
-//   &-secondary {
-//     &, > th, > td {
-//       background-color: $secondary;
-//     }
-//   }
+  &-secondary {
+    &, > th, > td {
+      background-color: $secondary;
+    }
+  }
 
-//   &-light {
-//     &, > th, > td {
-//       background-color: $light;
-//     }
-//   }
+  &-light {
+    &, > th, > td {
+      background-color: $light;
+    }
+  }
 
-//   &-dark {
-//     &, > th, > td {
-//       background-color: $dark;
-//     }
-//   }
+  &-dark {
+    &, > th, > td {
+      background-color: $dark;
+    }
+  }
 
-//   &-success {
-//     &, > th, > td {
-//       background-color: $success;
-//     }
-//   }
+  &-success {
+    &, > th, > td {
+      background-color: $success;
+    }
+  }
 
-//   &-info {
-//     &, > th, > td {
-//       background-color: $info;
-//     }
-//   }
+  &-info {
+    &, > th, > td {
+      background-color: $info;
+    }
+  }
 
-//   &-danger {
-//     &, > th, > td {
-//       background-color: $danger;
-//     }
-//   }
+  &-danger {
+    &, > th, > td {
+      background-color: $danger;
+    }
+  }
 
-//   &-warning {
-//     &, > th, > td {
-//       background-color: $warning;
-//     }
-//   }
+  &-warning {
+    &, > th, > td {
+      background-color: $warning;
+    }
+  }
 
-//   &-active {
-//     &, > th, > td {
-//       background-color: $table-active-bg;
-//     }
-//   }
+  &-active {
+    &, > th, > td {
+      background-color: $table-active-bg;
+    }
+  }
 
-//   &-hover {
+  &-hover {
 
-//     .table-primary:hover {
-//       &, > th, > td {
-//         background-color: darken($primary, 5%);
-//       }
-//     }
+    .table-primary:hover {
+      &, > th, > td {
+        background-color: darken($primary, 5%);
+      }
+    }
 
-//     .table-secondary:hover {
-//       &, > th, > td {
-//         background-color: darken($secondary, 5%);
-//       }
-//     }
+    .table-secondary:hover {
+      &, > th, > td {
+        background-color: darken($secondary, 5%);
+      }
+    }
 
-//     .table-light:hover {
-//       &, > th, > td {
-//         background-color: darken($light, 5%);
-//       }
-//     }
+    .table-light:hover {
+      &, > th, > td {
+        background-color: darken($light, 5%);
+      }
+    }
 
-//     .table-dark:hover {
-//       &, > th, > td {
-//         background-color: darken($dark, 5%);
-//       }
-//     }
+    .table-dark:hover {
+      &, > th, > td {
+        background-color: darken($dark, 5%);
+      }
+    }
 
-//     .table-success:hover {
-//       &, > th, > td {
-//         background-color: darken($success, 5%);
-//       }
-//     }
+    .table-success:hover {
+      &, > th, > td {
+        background-color: darken($success, 5%);
+      }
+    }
 
-//     .table-info:hover {
-//       &, > th, > td {
-//         background-color: darken($info, 5%);
-//       }
-//     }
+    .table-info:hover {
+      &, > th, > td {
+        background-color: darken($info, 5%);
+      }
+    }
 
-//     .table-danger:hover {
-//       &, > th, > td {
-//         background-color: darken($danger, 5%);
-//       }
-//     }
+    .table-danger:hover {
+      &, > th, > td {
+        background-color: darken($danger, 5%);
+      }
+    }
 
-//     .table-warning:hover {
-//       &, > th, > td {
-//         background-color: darken($warning, 5%);
-//       }
-//     }
+    .table-warning:hover {
+      &, > th, > td {
+        background-color: darken($warning, 5%);
+      }
+    }
 
-//     .table-active:hover {
-//       &, > th, > td {
-//         background-color: $table-active-bg;
-//       }
-//     }
-//   }
+    .table-active:hover {
+      &, > th, > td {
+        background-color: $table-active-bg;
+      }
+    }
+  }
 
-//   .thead-dark th {
-//     background-color: $primary;
-//     border-color: $table-border-color;
-//     font-family: $headings-font-family;
-//   }
-// }
+  .thead-dark th {
+    background-color: $primary;
+    border-color: $table-border-color;
+    font-family: $headings-font-family;
+  }
+}
 
 // Forms =======================================================================
 
-// legend {
-//   font-family: $headings-font-family;
-// }
+legend {
+  font-family: $headings-font-family;
+}
 
 // Navs ========================================================================
 
-// .dropdown-menu {
-//   font-family: $font-family-sans-serif;
-// }
+.dropdown-menu {
+  font-family: $font-family-sans-serif;
+}
 
-// .breadcrumb {
-//   a {
-//     color: $navbar-dark-color;
-//   }
+.breadcrumb {
+  a {
+    color: $navbar-dark-color;
+  }
 
-//   a:hover {
-//     color: $white;
-//     text-decoration: none;
-//   }
-// }
+  a:hover {
+    color: $white;
+    text-decoration: none;
+  }
+}
 
 // Indicators ==================================================================
 
-// .alert {
-//   color: $white;
+.alert {
+  color: $white;
 
-//   h1, h2, h3, h4, h5, h6 {
-//     color: inherit;
-//   }
+  h1, h2, h3, h4, h5, h6 {
+    color: inherit;
+  }
 
-//   a,
-//   .alert-link {
-//     color: $white;
-//   }
+  a,
+  .alert-link {
+    color: $white;
+  }
 
-//   &-primary {
-//     &, > th, > td {
-//       background-color: $primary;
-//     }
-//   }
+  &-primary {
+    &, > th, > td {
+      background-color: $primary;
+    }
+  }
 
-//   &-secondary {
-//     &, > th, > td {
-//       background-color: $secondary;
-//     }
-//   }
+  &-secondary {
+    &, > th, > td {
+      background-color: $secondary;
+    }
+  }
 
-//   &-success {
-//     &, > th, > td {
-//       background-color: $success;
-//     }
-//   }
+  &-success {
+    &, > th, > td {
+      background-color: $success;
+    }
+  }
 
-//   &-info {
-//     &, > th, > td {
-//       background-color: $info;
-//     }
-//   }
+  &-info {
+    &, > th, > td {
+      background-color: $info;
+    }
+  }
 
-//   &-danger {
-//     &, > th, > td {
-//       background-color: $danger;
-//     }
-//   }
+  &-danger {
+    &, > th, > td {
+      background-color: $danger;
+    }
+  }
 
-//   &-warning {
-//     &, > th, > td {
-//       background-color: $warning;
-//     }
-//   }
+  &-warning {
+    &, > th, > td {
+      background-color: $warning;
+    }
+  }
 
-//   &-dark {
-//     &, > th, > td {
-//       background-color: $dark;
-//     }
-//   }
+  &-dark {
+    &, > th, > td {
+      background-color: $dark;
+    }
+  }
 
-//   &-light {
-//     &, > th, > td {
-//       background-color: $light;
-//     }
-//   }
+  &-light {
+    &, > th, > td {
+      background-color: $light;
+    }
+  }
 
-//   &-light {
-//     &,
-//     & a:not(.btn),
-//     & .alert-link {
-//       color: $body-color;
-//     }
-//   }
-// }
+  &-light {
+    &,
+    & a:not(.btn),
+    & .alert-link {
+      color: $body-color;
+    }
+  }
+}
 
-// .badge {
-//   color: $white;
+.badge {
+  color: $white;
 
-//   &-light {
-//     color: $gray-700;
-//   }
-// }
+  &-light {
+    color: $gray-700;
+  }
+}
 
 // Progress bars ===============================================================
 
 // Containers ==================================================================
 
-// .card,
-// .list-group-item {
-//   h1, h2, h3, h4, h5, h6 {
-//     color: inherit;
-//   }
-// }
+.card,
+.list-group-item {
+  h1, h2, h3, h4, h5, h6 {
+    color: inherit;
+  }
+}
