--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,15 +7,7 @@
 @import "bootstrap_customization.scss";
 @import "bootstrap/bootstrap.scss";
 @import "bootstrap-4-jekyll/bootstrap-4-jekyll.scss";
-@import "font-awesome/scss/fontawesome.scss"
-
-
-/* Reset styles */
-* {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
+@import "font-awesome/scss/fontawesome.scss";
 
 
 /* Main page with stikky-footer */
