Fix code comments

--- a/assets/css/_bootstrap_customization.scss
+++ b/assets/css/_bootstrap_customization.scss
@@ -1,11 +1,4 @@
-// This is the place to place Bootstrap-related CSS customizations.
-
-// Below is the Minty theme example — switch it out for your site purposes!
-// As example you can start by importing the _bootswatch.scss file from one of the
-// theme provided by https://bootswatch.com .
-
-// Minty 4.3.1
-// Bootswatch
+// This is where you place Bootstrap-related CSS customizations
 
 // Variables ===================================================================
 
