--- a/assets/css/_syntax-highlighting.scss
+++ b/assets/css/_syntax-highlighting.scss
@@ -1,7 +1,4 @@
-// Syntax highlighting styles, can be modified to match the theme
-
-// Below is the Minty theme example — switch it out for your site purposes!
-
+// Syntax highlighting styles can be modified to match your theme
 
 .highlight {
 
