--- a/assets/css/bootstrap/mixins/_pagination.scss
+++ b/assets/css/bootstrap/mixins/_pagination.scss
@@ -1,10 +1,11 @@
 // Pagination
 
-@mixin pagination-size($padding-y, $padding-x, $font-size, $line-height, $border-radius) {
+@mixin pagination-size($padding-y, $padding-x, $font-size, $line-height, $letter-spacing: 1rem, $border-radius) {
   .page-link {
     padding: $padding-y $padding-x;
     @include font-size($font-size);
     line-height: $line-height;
+    letter-spacing: $letter-spacing;
   }
 
   .page-item {
