--- a/assets/css/_bootstrap_customization.scss
+++ b/assets/css/_bootstrap_customization.scss
@@ -2,7 +2,7 @@
 
 // Variables ===================================================================
 
-$web-font-path: "https://fonts.googleapis.com/css?family=Montserrat" !default;
+$web-font-path: "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" !default;
 @import url($web-font-path);
 
 // Navbar ======================================================================
