--- a/assets/css/_bootstrap_customization.scss
+++ b/assets/css/_bootstrap_customization.scss
@@ -88,7 +88,7 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400
   &-info,
   &-warning,
   &-danger {
-    color: #fff;
+    color: $white;
   }
 
   &-primary {
