--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,12 +1,5 @@
-// This is the place to place Bootstrap's variables overrides.
+// This is where you place Bootstrap's variable overrides
 
-// Below is the Minty theme example — switch it out for your site purposes!
-// As example you can start by importing the _variables.scss file from one of the
-// theme provided by https://bootswatch.com .
-
-
-// Some customization of the container class to have a better display in the guide.
-// Don't hesitate to remove it to have a standard Bootstrap behavior
 $container-max-widths: (
   sm: 540px,
   md: 640px,
@@ -14,50 +7,45 @@ $container-max-widths: (
   xl: 720px
 ) !default;
 
-// Minty 4.3.1
-// Bootswatch
-
-//
 // Color system
-//
 
-$white:    #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #f7f7f9 !default;
-$gray-300: #eceeef !default;
-$gray-400: #ced4da !default;
-$gray-500: #aaa !default;
-$gray-600: #888 !default;
-$gray-700: #5a5a5a !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
-$black:    #000 !default;
+$white:     #FFFFFF !default;
+$gray-100:  #F8F9FA !default;
+$gray-200:  #F7F7F9 !default;
+$gray-300:  #ECEEEF !default;
+$gray-400:  #CED4DA !default;
+$gray-500:  #AAAAAA !default;
+$gray-600:  #888888 !default;
+$gray-700:  #5A5A5A !default;
+$gray-800:  #343A40 !default;
+$gray-900:  #212529 !default;
+$black:     #000000 !default;
 
-$blue:    #007bff !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #FF7851 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #FFCE67 !default;
-$green:   #56CC9D !default;
-$teal:    #20c997 !default;
-$cyan:    #6CC3D5 !default;
+$pink:      #A40080 !default;
+$purple:    #550055 !default;
+$blue:      #006080 !default;
+$teal:      #008080 !default;
+$pinker:    #4B003A !default;
+$purpler:   #3C003C !default;
+$bluer:     #001B24 !default;
+$tealer:    #003838 !default;
+$pinkish:   #FEF3FC !default;
+$purplish:  #EBC6EB !default;
+$bluish:    #7EDCFB !default;
+$tealish:   #88D9D9 !default;
 
-$primary:       #78C2AD !default;
-$secondary:     #F3969A !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+$info:      #59CFF6 !default;
+$success:   #11A973 !default;
+$warning:   #FFE839 !default;
+$danger:    #97004D !default;
+$light:     $gray-100 !default;
+$dark:      $gray-800 !default;
 
 $yiq-contrasted-threshold: 250 !default;
 
 // Body
 
-$body-color:                $gray-600 !default;
+$body-color:              $purpler !default;
 
 // Components
 
@@ -84,7 +72,7 @@ $table-border-color:          rgba(0,0,0,0.05) !default;
 // Dropdowns
 
 $dropdown-link-hover-color:         $white !default;
-$dropdown-link-hover-bg:            $secondary !default;
+$dropdown-link-hover-bg:            $pinker !default;
 
 // Navbar
 
@@ -115,6 +103,6 @@ $pagination-disabled-border-color:  $pagination-disabled-bg !default;
 
 // Breadcrumbs
 
-$breadcrumb-bg:                     $primary !default;
+$breadcrumb-bg:                     $purple !default;
 $breadcrumb-divider-color:          $white !default;
 $breadcrumb-active-color:           $breadcrumb-divider-color !default;
