--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,11 +22,9 @@ body {
 body {
   font-size: 1.6rem;
   font-family: $body-font-family;
-  color: #360036;
-  /* color: #404040; */
-  -webkit-tap-highlight-color: #006080;
+  -webkit-tap-highlight-color: $blue;
   /* The html and body elements cannot have any padding or margin. */
-  border-top: 5px solid #A40080;
+  border-top: 5px solid $pink;
 }
 .container-fluid {
   width: auto;
@@ -55,20 +53,20 @@ p {
   margin: 2.6rem 0;
 }
 .pink {
-  color: #a40080;
+  color: $pink;
 }
 .purple {
-  color: #550055;
+  color: $purple;
 }
 .blue {
-  color: #006080;
+  color: $blue;
 }
 .teal {
-  color: #008080;
+  color: $teal;
 }
 .about-intro {
   font-size: 1.4em;
-  font-weight: bold;
+  font-weight: $bold;
   text-align: center;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -77,19 +75,19 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1rem;
 }
 h1.about {
-  color: #550055;
+  color: $purple;
 }
 code {
-  color: #006080;
+  color: $blue;
   background-color: #EDF7F8; 
 }
 a {
-  color: #a40080;
-  font-weight: bold;
+  color: $pink;
+  font-weight: $bold;
 }
 a:hover,
 a:focus {
-  color: #008080;
+  color: $teal;
   text-decoration: none;
 }
 a img:hover,
@@ -97,14 +95,13 @@ a img:focus {
   cursor: zoom-in;
 }
 blockquote {
-  color: #808080;
   font-style: italic;
 }
 hr.small {
   max-width: 100px;
   margin: 1.5rem auto;
   border-width: 4px;
-  border-color: white;
+  border-color: $white;
 }
 .text-muted {
   margin: 2rem 0;
@@ -117,7 +114,7 @@ hr.small {
   font-size: 2.5rem;
 }
 .social a {
-  color: #360036;
+  color: $purpler;
 }
 
 .avatar {
@@ -142,15 +139,15 @@ hr.small {
   font-size: 85%;
   font-weight: $bold;
   line-height: 1;
-  color: #fff;
+  color: $white;
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
   border-radius: .25em;
-  background-color: #550055
+  background-color: $purple
 }
 .tags a:hover {
-  background-color: #360036
+  background-color: $purpler
 }
 
 /* Footer */
@@ -162,7 +159,7 @@ hr.small {
 	color: #3fa9a9;
 }
 div.footer{
-  border-bottom: 5px solid #A40080;;
+  border-bottom: 5px solid $pink;;
 }
 /* Set the fixed height of the footer here */
 /*.footer {
@@ -182,7 +179,7 @@ div.footer{
 /* Page Headers */
 .intro-header {
   background: no-repeat center center;
-  background-color: #550055;
+  background-color: $purple;
   background-attachment: scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -197,8 +194,8 @@ div.footer{
 .intro-header .site-heading h1,
 .intro-header .page-heading h1 {
   margin-top: 0;
-  color: white;
-  text-shadow: 1px 1px 5px #360036, 3px 3px 5px #a40080, 2px 2px 5px #550055;
+  color: $white;
+  text-shadow: 1px 1px 5px $purpler, 3px 3px 5px $pink, 2px 2px 5px $purple;
 }
 .intro-header .site-heading .subheading,
 .intro-header .page-heading .subheading {
@@ -208,22 +205,22 @@ div.footer{
   font-family: $headings-font-family;
   font-weight: $light;
   margin: 1rem 0 0;
-  color: white;
-  text-shadow: 1px 1px 5px #360036, 2px 2px 5px #550055;
+  color: $white;
+  text-shadow: 1px 1px 5px $purpler, 2px 2px 5px $purple;
 }
 
 
 /* Post Headers */
 .intro-header .post-heading h1 {
-  color: white;
-  text-shadow: 1px 1px 5px #360036, 3px 3px 5px #a40080, 2px 2px 5px #550055;
+  color: $white;
+  text-shadow: 1px 1px 5px $purpler, 3px 3px 5px $pink, 2px 2px 5px $purple;
 }
 .intro-header .post-heading .subheading,
 .intro-header .post-heading .meta {
   line-height: 1.1;
   display: block;
-  color: white;
-  text-shadow: 1px 1px 5px #360036, 2px 2px 5px #550055;
+  color: $white;
+  text-shadow: 1px 1px 5px $purpler, 2px 2px 5px $purple;
 }
 .intro-header .post-heading .subheading {
   font-family: $headings-font-family;
@@ -238,7 +235,7 @@ div.footer{
   font-size: 2rem;
 }
 .intro-header .post-heading .meta a {
-  color: white;
+  color: $white;
 }
 
 @media (min-width: 768px) {
@@ -256,20 +253,20 @@ div.footer{
   }
   .intro-header .post-heading .subheading {
     font-size: 3rem;
-    color: white;
-    text-shadow: 1px 1px 5px #360036, 2px 2px 5px #550055;
+    color: $white;
+    text-shadow: 1px 1px 5px $purpler, 2px 2px 5px $purple;
   }
 }
 
 
 /* Post Previews */
 .post-preview > a {
-  color: #a40080;
+  color: $pink;
 }
 .post-preview > a:hover,
 .post-preview > a:focus {
   text-decoration: none;
-  color: #006080;
+  color: $blue;
 }
 .post-preview > a > .post-title {
   font-size: 3rem;
@@ -282,18 +279,18 @@ div.footer{
   margin-bottom: 1rem;
 }
 .post-preview > .post-meta {
-  color: #550055;
+  color: $purple;
   font-size: 1.8rem;
   font-style: italic;
   margin-top: 0;
 }
 .post-preview > .post-meta > a {
   text-decoration: none;
-  color: #a40080;
+  color: $pink;
 }
 .post-preview > .post-meta > a:hover,
 .post-preview > .post-meta > a:focus {
-  color: #006080;
+  color: $blue;
   text-decoration: underline;
 }
 @media only screen and (min-width: 768px) {
@@ -322,7 +319,7 @@ div.footer{
   position: relative;
   margin-bottom: 0;
   padding-bottom: 0.5rem;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid $gray-300;
 }
 .floating-label-form-group input,
 .floating-label-form-group textarea {
@@ -353,17 +350,17 @@ div.footer{
 }
 .floating-label-form-group::not(:first-child) {
   padding-left: 1.4rem;
-  border-left: 1px solid #eeeeee;
+  border-left: 1px solid $gray-300;
 }
 .floating-label-form-group-with-value label {
   top: 0;
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #006080;
+  color: $blue;
 }
 form .row:first-child .floating-label-form-group {
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid $gray-300;
 }
 
 
@@ -376,7 +373,7 @@ form .row:first-child .floating-label-form-group {
   letter-spacing: 1px;
   border-radius: 0;
   padding: 1.5rem 2.5rem;
-  background-color: #a40080;
+  background-color: $pink;
   border: none;
 }
 .btn-lg {
@@ -385,35 +382,35 @@ form .row:first-child .floating-label-form-group {
 }
 .btn-default:hover,
 .btn-default:focus {
-  background-color: #006080;
-  color: white;
+  background-color: $blue;
+  color: $white;
 }
 
 
 /* Selection */
 ::-moz-selection {
-  color: white;
+  color: $white;
   text-shadow: none;
-  background: #006080;
+  background: $blue;
 }
 ::selection {
-  color: white;
+  color: $white;
   text-shadow: none;
-  background: #006080;
+  background: $blue;
 }
 img::selection {
-  color: white;
+  color: $white;
   background: transparent;
 }
 img::-moz-selection {
-  color: white;
+  color: $white;
   background: transparent;
 }
 
 
 /* Navbar */
 .navbar-custom {
-  background: white;
+  background: $white;
   position: absolute;
   top: 0;
   left: 0;
@@ -434,62 +431,62 @@ img::-moz-selection {
   margin-bottom: 1rem;
 }
 .navbar-default {
-  background-color: #ffffff;
-  border-color: #ffffff;
+  background-color: $white;
+  border-color: $white;
 }
 .navbar-default .navbar-brand {
-  color: #360036;
+  color: $purpler;
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-  color: #360036;
+  color: $purpler;
 }
 .navbar-default .navbar-text {
-  color: #360036;
+  color: $purpler;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #360036;
+  color: $purpler;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #360036;
+  color: $purpler;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-  color: #360036;
-  background-color: #ffffff;
+  color: $purpler;
+  background-color: $white;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  color: #360036;
-  background-color: #ffffff;
+  color: $purpler;
+  background-color: $white;
 }
 .navbar-default .navbar-toggle {
-  border-color: #ffffff;
+  border-color: $white;
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: #ffffff;
+  background-color: $white;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #360036;
+  background-color: $purpler;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #360036;
+  border-color: $purpler;
 }
 .navbar-default .navbar-link {
-  color: #360036;
+  color: $purpler;
 }
 .navbar-default .navbar-link:hover {
-  color: #360036;
+  color: $purpler;
 }
 
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #360036;
+    color: $purpler;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #360036;
+    color: $purpler;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #360036;
-    background-color: #ffffff;
+    color: $purpler;
+    background-color: $white;
   }
 }
 
@@ -500,20 +497,20 @@ img::-moz-selection {
     border-bottom: 1px solid transparent;
   }
   .navbar-custom .navbar-brand {
-    color: #008080;
+    color: $teal;
     padding: 2rem;
   }
   .navbar-custom .navbar-brand:hover,
   .navbar-custom .navbar-brand:focus {
-    color: rgba(0, 128, 128, 0.8);
+    color: rgba($teal, 0.8);
   }
   .navbar-custom .nav li a {
-    color: #008080;
+    color: $teal;
     padding: 2rem;
   }
   .navbar-custom .nav li a:hover,
   .navbar-custom .nav li a:focus {
-    color: rgba(0, 128, 128, 0.8);
+    color: rgba($teal, 0.8);
   }
 }
 
@@ -536,25 +533,25 @@ img::-moz-selection {
     /* when the user scrolls down, we hide the header right above the viewport */
     position: fixed;
     top: -6.1rem;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-bottom: 1px solid #f2f2f2;
+    background-color: rgba($white, 0.9);
+    border-bottom: 1px solid $gray-100;
     -webkit-transition: -webkit-transform 0.3s;
     -moz-transition: -moz-transform 0.3s;
     transition: transform 0.3s;
   }
   .navbar-custom.is-fixed .navbar-brand {
-    color: #550055;
+    color: $purple;
   }
   .navbar-custom.is-fixed .navbar-brand:hover,
   .navbar-custom.is-fixed .navbar-brand:focus {
-    color: #006080;
+    color: $blue;
   }
   .navbar-custom.is-fixed .nav li a {
-    color: #550055;
+    color: $purple;
   }
   .navbar-custom.is-fixed .nav li a:hover,
   .navbar-custom.is-fixed .nav li a:focus {
-    color: #006080;
+    color: $blue;
   }
   .navbar-custom.is-visible {
     /* if the user changes the scrolling direction, we show the header */
@@ -576,27 +573,27 @@ body > div#bare > section#coming-soon {
   background-image: url('/static/img/color-splash-background.jpg');
   background-position: center;
   background-size: cover;
-  background-color: #ffffff;
+  background-color: $white;
   height: 100vh;
 }
 section#coming-soon div.title {
   padding: 14rem 0 10rem 0;
 }
 section#coming-soon div.title h1 {
-  color: white;
-  text-shadow: 3px 3px 0.5rem #360036, 5px 5px 0.75rem #550055, 7px 7px 1rem #a40080;
+  color: $white;
+  text-shadow: 3px 3px 0.5rem $purpler, 5px 5px 0.75rem $purple, 7px 7px 1rem $pink;
   font-size: 8.4rem;
 }
 section#coming-soon div.summary {
   margin: 0rem 7.5rem 10rem 7.5rem;
   padding: 2.5rem 5rem;
-  background: rgba(54, 0, 54, 0.8);
-  border: 0.25rem solid #006080;
+  background: rgba($purpler, 0.8);
+  border: 0.25rem solid $blue;
   border-radius: 25px;
   /* TODO: Add shadow element */
 }
 section#coming-soon div.summary p {
-  color: #fff;
+  color: $white;
   font-size: 2.4rem;
   line-height: 3.3rem;
   font-family: $body-font-family;
@@ -604,26 +601,26 @@ section#coming-soon div.summary p {
   padding-top: 2rem;
 }
 section#coming-soon div.summary p a {
-  color: #008080;
+  color: $teal;
   font-weight: $bold;
   text-decoration: none;
 }
 section#coming-soon div.summary p a:hover {
-  color: #A40080;
+  color: $pink;
   font-weight: $bold;
   text-decoration: none;
 }
 section#coming-soon div.summary p.about-intro {
-  text-shadow: 3px 3px 0.5rem #ffffff;
+  text-shadow: 3px 3px 0.5rem $white;
 }
 section#coming-soon div.summary div.social {
   padding-top: 3.5rem;
 }
 section#coming-soon div.summary div.social a {
-  color: #008080;
+  color: $teal;
 }
 section#coming-soon div.summary div.social a:hover {
-  color: #A40080;
+  color: $pink;
 }
 
 /* Medium devices (portrait phones and tablets, 768px to 991px) */
