--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -38,36 +38,97 @@ $info:      #59CFF6 !default;
 $success:   #11A973 !default;
 $warning:   #FFE839 !default;
 $danger:    #97004D !default;
+$muted:     #3FA9A9 !default;
 $light:     $gray-100 !default;
 $dark:      $gray-800 !default;
 
-$yiq-contrasted-threshold: 250 !default;
-
 // Body
+
+// Settings for the `<body>` element
 
 $body-color:              $purpler !default;
 
+// Links
+
+// Style anchor elements
+
+$link-color:                              $pink !default;
+$link-hover-color:                        $teal !default;
+$link-hover-decoration:                   none !default;
+
 // Components
+
+// Define common padding and border radius sizes and more
 
 $border-radius:           .4rem !default;
 $border-radius-lg:        .6rem !default;
 $border-radius-sm:        .3rem !default;
 
-// Fonts
+// Typography
 
-$body-font-family:        "Source Sans Pro", "Lora", Arial, sans-serif !default;
-$headings-font-family:    "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$meta-font-family:        "Lora", "Times New Roman", Arial, serif;
+// `font`, `line-height`, and `color` for body text, headings, and more
 
-$light:                   300 !default;
-$regular:                 400 !default;
-$semi-bold:               600 !default;
-$bold:                    700 !default;
-$boldest:                 900 !default;
+// stylelint-disable value-keyword-case
+$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-base:            "Source Sans Pro", "Lora", Arial, sans-serif !default;
+$font-family-meta:            "Lora", "Times New Roman", Arial, serif;
+// stylelint-enable value-keyword-case
+
+$font-size-base:              1.6rem !default; // Assumes the browser default, typically `16px`
+
+$font-weight-semi-bold:       600 !default;
+
+$font-weight-base:            $font-weight-normal !default;
+$line-height-base:            2.2 !default;
+
+$headings-font-family:        "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$headings-font-weight:        $font-weight-normal !default;
+$headings-line-height:        1 !default;
+
+$text-muted:                  $muted !default;
+
+$blockquote-small-color:      $muted !default;
 
 // Tables
 
+// Customizes the `.table` component with basic values, each used across all table variations
+
 $table-border-color:          rgba(0,0,0,0.05) !default;
+
+// Buttons + Forms
+
+// Shared variables that are reassigned to `$input-` and `$btn-` specific variables
+
+$input-btn-padding-y:         1.5rem !default;
+$input-btn-padding-x:         2.5rem !default;
+$input-btn-font-family:       $headings-font-family !default;
+$input-btn-font-size:         1.4rem !default;
+
+$input-btn-padding-y-sm:      0.75rem !default;
+$input-btn-padding-x-sm:      2rem !default;
+$input-btn-font-size-sm:      1.2rem !default;
+
+$input-btn-padding-y-lg:      2.5rem !default;
+$input-btn-padding-x-lg:      3.5rem !default;
+$input-btn-font-size-lg:      1.6rem !default;
+
+// Buttons
+
+// For each of Bootstrap's buttons, define text, background, and border color
+
+$btn-font-weight:             $font-weight-bold !default;
+
+// Allows for customizing button radius independently from global border radius
+$btn-border-radius:           0 !default;
+$btn-border-radius-lg:        0 !default;
+$btn-border-radius-sm:        0 !default;
+
+$btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+
+// Forms
+
+
 
 // Dropdowns
 
