--- a/assets/css/bootstrap/_variables.scss
+++ b/assets/css/bootstrap/_variables.scss
@@ -45,7 +45,7 @@ $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
-$colors: () !default;
+$colors: () !default;               // ! TODO
 // stylelint-disable-next-line scss/dollar-variable-default
 $colors: map-merge(
   (
@@ -66,8 +66,8 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
+$primary:       $blue !default;       // ! TODO
+$secondary:     $gray-600 !default;   // ! TODO
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -75,7 +75,7 @@ $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
 
-$theme-colors: () !default;
+$theme-colors: () !default;           // ! TODO
 // stylelint-disable-next-line scss/dollar-variable-default
 $theme-colors: map-merge(
   (
@@ -171,7 +171,7 @@ $link-color:                              theme-color("primary") !default;
 $link-decoration:                         none !default;
 $link-hover-color:                        darken($link-color, 15%) !default;
 $link-hover-decoration:                   underline !default;
-// Darken percentage for links with `.text-*` class (e.g. `.text-success`)
+// Darken percentage for links with `.text-*` class (e.g. `.text-success`)      // ! TODO
 $emphasized-link-hover-darken-percentage: 15% !default;
 
 // Paragraphs
