--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -250,20 +250,16 @@ $dropdown-header-color:             $gray-600 !default;
 
 // Pagination
 
-$pagination-color:                  $pink !default;
-$pagination-bg:                     $white !default;
-$pagination-border-color:           $white !default;
+$pagination-padding-y:              1rem !default;
+$pagination-padding-x:              0.5rem !default;
+$pagination-padding-y-sm:           0.5rem !default;
+$pagination-padding-x-sm:           0.25rem !default;
+$pagination-padding-y-lg:           1.5rem !default;
+$pagination-padding-x-lg:           0.75rem !default;
 
 $pagination-hover-color:            $white !default;
 $pagination-hover-bg:               $blue !default;
-$pagination-hover-border-color:     $pagination-hover-bg !default;
-
-$pagination-active-bg:              $white !default;
-$pagination-active-border-color:    $pagination-active-bg !default;
-
-$pagination-disabled-color:         $gray-600 !default;
-$pagination-disabled-bg:            $purple !default;
-$pagination-disabled-border-color:  $pagination-disabled-bg !default;
+$pagination-hover-border-color:     $blue !default;
 
 // Breadcrumbs
 
