--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -284,6 +284,21 @@ div.footer{
 }
 
 
+/* Pagers */
+.pager {
+  margin: 2rem 0 0;
+}
+.pager li > a,
+.pager li > span {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 800;
+  letter-spacing: 1px;
+  border-radius: 0;
+}
+
+
 /* Captions */
 .caption {
   text-align: center;
