Customize code component

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -266,3 +266,11 @@ $pagination-hover-border-color:     $blue !default;
 $breadcrumb-bg:                     $purple !default;
 $breadcrumb-divider-color:          $white !default;
 $breadcrumb-active-color:           $breadcrumb-divider-color !default;
+
+// Code
+
+$code-color:                        $blue !default;
+
+$kbd-bg:                            #EDF7F8 !default;
+
+$pre-color:                         #EDF7F8 !default;
