--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,13 +1,6 @@
 // This is where you place Bootstrap's variable overrides
 
-$container-max-widths: (
-  sm: 540px,
-  md: 640px,
-  lg: 690px,
-  xl: 720px
-) !default;
-
-// Color system
+// Color system //
 
 $white:     #FFFFFF !default;
 $gray-100:  #F5F5F5 !default;
